[package]
name = "loop-detect"
version = "0.1.0"
edition = "2021"

[dependencies]
miniserde = { version = "0.1", optional = true }
rayon = { version = "1", optional = true }
rustfft = "6"
pico-args = { version = "0.5", optional = true }

[features]
default = ["cli"]
cli = ["miniserde", "rayon", "pico-args"]